--- a/lesson_12_hm/index.html
+++ b/lesson_12_hm/index.html
@@ -35,7 +35,7 @@
 							</p>
 						</div>
 						<div class="scale__item">
-							<img src="/img/smile.webp" alt="smile">
+							<img src="img/smile.webp" alt="smile">
 						</div>
 					</div>
 				</div>
