--- a/lesson_15_homework/index.html
+++ b/lesson_15_homework/index.html
@@ -63,7 +63,7 @@
 							</div>
 						</div>
 						<div class="body-main__media">
-							<img class="body-main__image" src="/img/main.svg" alt="image">
+							<img class="body-main__image" src="img/main.svg" alt="image">
 						</div>
 					</div>
 					<div class="main-block__statistics statistics-main">
