--- a/lesson_16_homework_2/index.html
+++ b/lesson_16_homework_2/index.html
@@ -18,7 +18,7 @@
 				<div class="contact-block__container">
 					<form action="https://jsonplaceholder.typicode.com/posts" method="POST" class="contact-block__form form">
 						<div class="form-contact__media">
-							<img src="../img/contacts/illustration.svg " alt="illustration" class="form-contact__image">
+							<img src="img/contacts/illustration.svg " alt="illustration" class="form-contact__image">
 						</div>
 						<div class="form-contact__forms">
 							<div class="form-contact__header header-text">
