--- a/lesson_16_homework_2/index.html
+++ b/lesson_16_homework_2/index.html
@@ -76,8 +76,7 @@
 											receive communications from Createx Online School</span></label>
 								</div>
 								<button type="submit" class="form-contact__button button">
-									<span>Send messageSend messageSend messageSend messageSend messageSend messageSend
-										messageSend messageSend messageSend messageSend messageSend message</span>
+									<span>Send message</span>
 								</button>
 							</div>
 						</div>
